refactoring due to implementation Exception Handler